--- a/_posts/2005-11-13-Fish.md
+++ b/_posts/2005-11-13-Fish.md
@@ -4,6 +4,9 @@ tags:
   - "Fish"
 categories:
   - "013 - Tilburg"
+recording:
+  title: "Return to Childhood"
+  url: "https://fishmusic.scot/discography/return-to-childhood/13"
 ---
 Setlist
 -------
