--- a/_posts/2007-07-01-Genesis.md
+++ b/_posts/2007-07-01-Genesis.md
@@ -4,6 +4,9 @@ tags:
   - "Genesis"
 categories:
   - "ArenA - Amsterdam"
+recording:
+  title: "Live over Europe"
+  url: "https://en.wikipedia.org/wiki/Live_over_Europe_2007"
 ---
 Setlist
 -------
