--- a/_posts/2013-10-28-Camel.md
+++ b/_posts/2013-10-28-Camel.md
@@ -4,6 +4,9 @@ tags:
   - "Camel"
 categories:
   - "Barbican Centre - London"
+recording:
+  title: "In from the Cold"
+  url: "http://www.progarchives.com/album.asp?id=44918"
 ---
 Setlist
 -------
